	CHG: Made the HUD icons semi-transparent when the hero is underneath (#123).
	FIX: Fixed collectible treasures amount not being updated (#122).
	FIX: Fixed static items sprites not showing the right variant in the inventory (#125).
	FIX: Fixed scrollable map not being centered when using another quest size (#126).

Alpha 1.17 (started 03/05/23) "Needlefish Update":
	TDO: Fix the map menu being openable when a map transition is playing (#128).
	TDO: Fix a nil value error in the inventory after buying something from Ravio (#92).
	TDO: Replace corrupt files.
	TDO: Fix "door_manager:open_when_switch_activated()" only opening the last door when there are multiple doors (#75).
	TDO: Fix the water level changing animation in the Water Temple (#56).
	TDO: Fix crash on ocarina cinematic because of an invalid animation direction (#63).
	TDO: Fix changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
	TDO: Progressively switch enemies behaviour to ALTTD'S.
	TDO: Fix diagonal jumpers jump lengths being too high in the mountains (#38).
	TDO: Fix not enough memory issues on MacOS (#39).
	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
	TDO: Update the statistics menu with treasures from the Excel file (#46).
	TDO: Fix the HUD clock showing the wrong hour randomly (#114).

Alpha 1.17.1 (//23) "Needlefish Update":
	TDO: Remove work *.xcf and *.psd files from the data files.
	TDO: Add the ability to switch shaders through the options menu (#119).
	TDO: Add night entities to maps (#67).
	TDO: Add hook entities to trees (#103).
	TDO: Finish the remaining houses (#104).
	TDO: Add remaining inside maps coordinates (#105).
	TDO: Add items treasure and inventory missing dialogues (#9).
	TDO: Fix victory animation not being synchronised with Link movement (#10).
	TDO: Clean up unused files (#98).
	TDO: Fix Link being invisible after fighting boss (#16).
	TDO: Fix missing animations for other tunics (#47).