@@ -355,6 +355,7 @@ sprite{ id = "enemies/boss/moldorm_components/body_2", description = "Moldorm bo
 sprite{ id = "enemies/boss/moldorm_components/body_3", description = "Moldorm body 3" }
 sprite{ id = "enemies/boss/moldorm_components/tail", description = "Moldorm tail" }
 sprite{ id = "enemies/boss/poe_big", description = "Big Poe" }
+sprite{ id = "enemies/boss/projectiles/axe_unused", description = "Axe (Unused)" }
 sprite{ id = "enemies/boss/spectral_ganon", description = "Spectral Ganon" }
 sprite{ id = "enemies/boss/tentacle_boss", description = "Tentacle Boss" }
 sprite{ id = "enemies/dungeons/arm_mimic", description = "Arm Mimic" }
