@@ -1,6 +1,6 @@
 animation{
   name = "spinning",
-  src_image = "enemies/boss/shadow_nightmares/projectiles/axe.png",
+  src_image = "enemies/boss/projectiles/axe.png",
   frame_delay = 120,
   frame_to_loop_on = 0,
   directions = {
@@ -12,7 +12,7 @@ animation{
 }
 animation{
   name = "aiming",
-  src_image = "enemies/boss/shadow_nightmares/projectiles/axe.png",
+  src_image = "enemies/projectiles/axe.png",
   frame_delay = 120,
   frame_to_loop_on = 0,
   directions = {
@@ -24,7 +24,7 @@ animation{
 }
 animation{
   name = "holded",
-  src_image = "enemies/boss/shadow_nightmares/projectiles/axe.png",
+  src_image = "enemies/boss/projectiles/axe.png",
   directions = {
     { x = 96, y = 192, frame_width = 96, frame_height = 96, origin_x = 48, origin_y = 93 },
     { x = 96, y = 192, frame_width = 96, frame_height = 96, origin_x = 48, origin_y = 93 },
@@ -34,7 +34,7 @@ animation{
 }
 animation{
   name = "taking",
-  src_image = "enemies/boss/shadow_nightmares/projectiles/axe.png",
+  src_image = "enemies/boss/projectiles/axe.png",
   frame_delay = 500,
   directions = {
     { x = 0, y = 192, frame_width = 96, frame_height = 96, origin_x = 48, origin_y = 93, num_frames = 2 },
