@@ -358,6 +358,9 @@ Alpha 1.16.2 (23/04/23) "Mackerel Update":
 	FIX: Fixed scrollable map not being centered when using another quest size (#126).
 
 Alpha 1.17 (started 03/05/23) "Needlefish Update":
+	CHG: Redone Spectral Ganon's sprite (#29).
+	CHG: Changed Spectral Ganon's settings according to the sprite (#29).
+	CHG: Moved the green house in the east of the castle.
 	TDO: Fix the map menu being openable when a map transition is playing (#128).
 	TDO: Fix a nil value error in the inventory after buying something from Ravio (#92).
 	TDO: Replace corrupt files.
@@ -422,7 +425,6 @@ Alpha 1.18.1 (//23) "Opah Update":
 	TDO: Add decoration to temples.
 	TDO: Add all the Pokémons.
 	TDO: Find throwing and holding bomb animations for Hinox sprite (#28).
-	TDO: Make a new sprite for Spectral Ganon (#29).
 	TDO: Progressively switch enemies behaviour to ALTTD'S.
 	TDO: Improve the shield usability (#30).
 	TDO: Fix bombs not being liftable when starting the game inside unless going outside (#31).
